--- a/Kubernetes/deployment.yml
+++ b/Kubernetes/deployment.yml
@@ -1,23 +1,23 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: youtube-clone-app
+  name: youtube-app
   labels:
-    app: youtube-clone-app
+    app: youtube-app
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: youtube-clone-app
+      app: youtube-app
   template:
     metadata:
       labels:
-        app: youtube-clone-app
+        app: youtube-app
     spec:
       terminationGracePeriodSeconds: 30
       containers:
-      - name: youtube-clone-app
-        image: ashfaque9x/youtube-clone:latest
+      - name: youtube-app
+        image: dhruvdarji123/youtube:latest
         imagePullPolicy: "Always"
         ports:
         - containerPort: 3000
