--- a/Kubernetes/service.yml
+++ b/Kubernetes/service.yml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: youtube-clone-app
+  name: youtube-app
   labels:
-    app: youtube-clone-app
+    app: youtube-app
 spec:
   type: LoadBalancer
   ports:
   - port: 80
     targetPort: 3000
   selector:
-    app: youtube-clone-app
+    app: youtube-app
